# Agent-citizen-identification

./: .gitignore  CONTRIBUTING.md  README.md  Seguridad de Agentes de IA_ Firma Digital.md  package-lock.json  package.json
.github/workflows/: ci-a2a.yml  ci-integration-governance.yml  ci-langchain-js.yml  ci-langchain-python.yml  ci-python.yml  ci.yml  contract-audit.yml
contracts/: .gitignore
contracts/src/: AgentRegistry.sol
docs/: Architecture-and-SDK-Design.md  Complete-Agent-DID-SDK-Course-EN.md  Complete-Agent-DID-SDK-Course-ES.md  Curso-2h-RFC-001.md  Curso-Completo-Agent-DID-SDK-EN.md  Curso-Completo-Agent-DID-SDK-ES.md  Curso-Completo-Agent-DID-SDK.md  Documentation-Governance.md  F1-03-LangChain-Integration-Parity-Review-Checklist.md  F1-03-LangChain-Python-Implementation-Checklist.md  F1-03-LangChain-Python-Integration-Design.md  F1-03-LangChain-Python-Technical-Plan.md  F1-03-LangChain-TS-Python-Integration-Parity-Matrix.md  F1-05-Contract-Audit-Triage.md  F2-01-Python-SDK-Blueprint.md  F2-04-Microsoft-Agent-Framework-Implementation-Checklist.md  F2-04-Microsoft-Agent-Framework-Integration-Design.md  F2-04-Microsoft-Agent-Framework-Integration-Review-Checklist.md  F2-05-CrewAI-Implementation-Checklist.md  F2-05-CrewAI-Integration-Design.md  F2-05-CrewAI-Integration-Review-Checklist.md  Manual-Capacitacion-RFC-001.md  PHILOSOPHY.md  RFC-001-2h-Practical-Course.md  RFC-001-Agent-DID-Specification.md  RFC-001-Training-Manual.md  SDK-Release-Checklist.md  Strategic-Assessment-Agent-DID-EN.md  Strategic-Assessment-Agent-DID-ES.md
integrations/a2a/: README.md  pyproject.toml
integrations/a2a/examples/: a2a_agent_did_discovery.py  a2a_mutual_auth_demo.py
integrations/a2a/src/agent_did_a2a/: __init__.py  agent_card.py  config.py  context.py  integration.py  jsonrpc.py  observability.py  sanitization.py  snapshot.py
integrations/a2a/tests/: test_agent_card.py  test_jsonrpc.py  test_observability.py  test_security.py  test_wiring.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/examples/: agent_did_crewai_mvp_example.py
integrations/crewai/src/agent_did_crewai/: __init__.py  callbacks.py  config.py  context.py  guardrails.py  integration.py  sanitization.py  snapshot.py  structured_outputs.py  tools.py
integrations/crewai/tests/: test_integration.py  test_security.py  test_tools.py  test_wiring.py
integrations/langchain-python/: README.md  pyproject.toml
integrations/langchain-python/examples/: agent_did_langchain_did_wba_demo.py  agent_did_langchain_example.py  agent_did_langchain_langsmith_example.py  agent_did_langchain_multitool_agent_example.py  agent_did_langchain_production_recipe_example.py
integrations/langchain-python/src/agent_did_langchain/: __init__.py  config.py  context.py  integration.py  observability.py  snapshot.py
integrations/langchain-python/tests/: test_context.py  test_did_wba_demo.py  test_integration.py  test_observability.py  test_security.py  test_snapshot.py  test_tools.py
scripts/: check-integration-governance.js  conformance-rfc001.js  contract-audit.js  resolver-ha-smoke.js  rpc-resolver-smoke.js  smoke-utils.js
sdk/: .npmignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
(+32 files in other folders)
